--- a/src/components/Subcribe.module.css
+++ b/src/components/Subcribe.module.css
@@ -18,8 +18,8 @@
   font-family: "PT Serif";
   font-style: normal;
   font-weight: 700;
-  font-size: 34px;
-  /* line-height: 58px; */
+  font-size: clamp(1.25rem, 4vw, 34px);
+  line-height: 1.4;
 
   letter-spacing: 0.01em;
 
@@ -32,12 +32,12 @@
 
   max-width: 563px;
   margin: 0 auto;
-
+padding-top: 1rem;
   font-family: "Helvetica";
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 36px;
+  font-size: clamp(0.875rem, 2.5vw, 16px);
+  line-height: 1.8;
 
   letter-spacing: 0.01em;
 
