--- a/src/pages/Ourservices.module.css
+++ b/src/pages/Ourservices.module.css
@@ -33,7 +33,7 @@
   background: rgba(27, 23, 37, 0.05);
   box-shadow: -4px 4px 5px 2px rgba(0, 0, 0, 0.05);
   padding: 1rem;
-  height: 250px;
+  min-height: 250px;
   border-bottom-left-radius: 27px;
   border-bottom-right-radius: 27px;
   /* border-radius: 27px; */
